--- a/demo/index.html
+++ b/demo/index.html
@@ -20,6 +20,7 @@ Zhi.detectGesture(document.body, ['tap'])
 
 <ul>
 	<li><a href="tap.html">Tap</a>
+	<li><a href="pan.html">Pan</a>
 </ul>
 
 </body>
