--- a/demo/tap.html
+++ b/demo/tap.html
@@ -4,15 +4,18 @@
 <title>Test Tap</title>
 <meta name="viewport" content="width=device-width">
 <style>
+html {
+	font-size: 2em;
+}
 #ground {
 	margin: 1em;
 	padding: 1em;
 	border: medium solid;
 }
 #ball {
-	width: 3em;
-	height: 3em;
-	border-radius: 1.5em;
+	width: 5em;
+	height: 5em;
+	border-radius: 2.5em;
 	background: red;
 }
 </style>
@@ -27,7 +30,9 @@
 Zhi.detectGesture(document.getElementById('ground'), ['tap'])
 
 document.getElementById('ball').addEventListener('tap', function(){
-	alert("Oh, I'm tapped!")
+	setTimeout(function(){
+		alert("Oh, I'm tapped!")
+	}, 500)
 })
 </script>
 
