--- a/demo/tap.html
+++ b/demo/tap.html
@@ -7,32 +7,53 @@
 html {
 	font-size: 2em;
 }
-#ground {
+article {
 	margin: 1em;
 	padding: 1em;
 	border: medium solid;
+	text-align: center;
 }
-#ball {
+#ball1, #ball2 {
 	width: 5em;
 	height: 5em;
 	border-radius: 2.5em;
 	background: red;
 }
+
+#ball2 {
+	background: rgba(255, 0, 0, 0.5);
+	position: relative; top: -2em;
+}
 </style>
+<script src="../src/log.js"></script>
+<script src="../src/event.js"></script>
 <script src="../src/index.js"></script>
 </head>
 <body>
 
-<article id="ground">
-	<div id="ball"></div>	
+<article id="ground1">
+	<div id="ball1"></div>	
 </article>
-<script>
-Zhi.detectGesture(document.getElementById('ground'), ['tap'])
 
-document.getElementById('ball').addEventListener('tap', function(){
-	setTimeout(function(){
-		alert("Oh, I'm tapped!")
-	}, 500)
+<article id="ground2">
+	<a href="#" onclick="alert('bug!');">test</a>
+	<div id="ball2"></div>
+</article>
+
+<script>
+Zhi.detectGesture(document.getElementById('ground1'), ['tap'])
+
+document.getElementById('ball1').addEventListener('tap', function(){
+	alert("Oh, I'm tapped!")
+})
+
+
+Zhi.detectGesture(document.getElementById('ground2'), ['tap'])
+
+document.getElementById('ball2').addEventListener('click', function(){
+	//this.style.pointerEvents = 'none'
+	this.style.visibility = 'hidden'	
+	alert("Oh, I'm tapped!")
 })
 </script>
 
